[gd_scene load_steps=24 format=3 uid="uid://cba3m5gci8old"]

[ext_resource type="Script" path="res://ui/hud/ui.gd" id="1_yktcp"]
[ext_resource type="Texture2D" uid="uid://cqutuq0jrsqbu" path="res://ui/hud/settings/sprites/park.svg" id="2_wwa4d"]
[ext_resource type="FontFile" uid="uid://b3v175ls5slpe" path="res://resources/fonts/PIXELADE.TTF" id="3_g1lr1"]
[ext_resource type="Material" uid="uid://de0kp0bflu8l6" path="res://materials/camera/filter_shader_material_day.tres" id="4_y8ln0"]
[ext_resource type="Theme" uid="uid://fk4bfu837bvc" path="res://materials/ui/theme.tres" id="5_jc2jt"]
[ext_resource type="PackedScene" uid="uid://bkxydu410llqn" path="res://ui/hud/settings/settings.tscn" id="6_1eey1"]
[ext_resource type="Texture2D" uid="uid://dptxys2tpqwm1" path="res://ui/hud/settings/sprites/icons.png" id="7_acr4x"]
[ext_resource type="PackedScene" uid="uid://csy5nja40cw3j" path="res://ui/hud/debug/debug_ui.tscn" id="7_udyie"]
[ext_resource type="PackedScene" uid="uid://dxji80jjayie" path="res://ui/environment/environment.tscn" id="8_5xy2s"]
[ext_resource type="Texture2D" uid="uid://clmp0yvvfpwc2" path="res://entities/items/nodes/food/sprites/food.png" id="10_o6vrp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bnnow"]
bg_color = Color(0, 0, 0, 0.788235)

[sub_resource type="LabelSettings" id="LabelSettings_br3iv"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_aes4b"]
font_size = 38

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mo36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m2pxu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3q2we"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_400cc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yld6r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjwsg"]
bg_color = Color(0, 0, 0, 0.737255)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[sub_resource type="Animation" id="Animation_t16xq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_34fcx"]
resource_name = "notification_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_av3cc"]
resource_name = "notification_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fht44"]
_data = {
"RESET": SubResource("Animation_t16xq"),
"notification_in": SubResource("Animation_34fcx"),
"notification_out": SubResource("Animation_av3cc")
}

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_yktcp")

[node name="Environment" parent="." instance=ExtResource("8_5xy2s")]
offset_left = 7.0
offset_top = 2.0
offset_right = 7.0
offset_bottom = 2.0

[node name="Filter" type="ColorRect" parent="."]
material = ExtResource("4_y8ln0")
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.061
offset_left = -3871.0
offset_top = -1249.0
offset_right = 4025.0
offset_bottom = 3128.73

[node name="UiControl" type="VBoxContainer" parent="."]
z_index = 4096
y_sort_enabled = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UiControl"]
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bnnow")

[node name="MarginContainer" type="MarginContainer" parent="UiControl/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 1

[node name="Banner" type="BoxContainer" parent="UiControl/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
size_flags_vertical = 4

[node name="Icon" type="Control" parent="UiControl/PanelContainer/MarginContainer/Banner"]
custom_minimum_size = Vector2(67, 46)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Icon" type="Sprite2D" parent="UiControl/PanelContainer/MarginContainer/Banner/Icon"]
position = Vector2(23.5, 22.5)
scale = Vector2(1.625, 1.625)
texture = ExtResource("2_wwa4d")

[node name="Icon2" type="Sprite2D" parent="UiControl/PanelContainer/MarginContainer/Banner/Icon"]
position = Vector2(50, 28)
scale = Vector2(1.00521, 1.00521)
texture = ExtResource("2_wwa4d")

[node name="LocationContainer" type="MarginContainer" parent="UiControl/PanelContainer/MarginContainer/Banner"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="Location" type="Label" parent="UiControl/PanelContainer/MarginContainer/Banner/LocationContainer"]
y_sort_enabled = true
custom_minimum_size = Vector2(305, 90)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_jc2jt")
text = " Central park"
label_settings = SubResource("LabelSettings_br3iv")
vertical_alignment = 1

[node name="Spacing" type="MarginContainer" parent="UiControl/PanelContainer/MarginContainer/Banner"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Time" type="Label" parent="UiControl/PanelContainer/MarginContainer/Banner"]
y_sort_enabled = true
custom_minimum_size = Vector2(73, 90)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("5_jc2jt")
text = "00:00"
label_settings = SubResource("LabelSettings_aes4b")
horizontal_alignment = 2
vertical_alignment = 1
justification_flags = 162

[node name="SettingsButton" type="Control" parent="UiControl/PanelContainer/MarginContainer/Banner"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Button" type="Button" parent="UiControl/PanelContainer/MarginContainer/Banner/SettingsButton"]
custom_minimum_size = Vector2(86, 82)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_4mo36")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_m2pxu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3q2we")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_400cc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yld6r")

[node name="Icons" type="Sprite2D" parent="UiControl/PanelContainer/MarginContainer/Banner/SettingsButton"]
modulate = Color(1, 1, 1, 0.729412)
position = Vector2(44, 46)
scale = Vector2(2.8, 2.8)
texture = ExtResource("7_acr4x")
hframes = 8

[node name="ShowSettings" type="MarginContainer" parent="UiControl"]
custom_minimum_size = Vector2(1, 60)
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16

[node name="MarginContainer" type="MarginContainer" parent="UiControl"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 19

[node name="InfoBanner" type="PanelContainer" parent="UiControl/MarginContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(19, 63)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_xjwsg")

[node name="Info" type="RichTextLabel" parent="UiControl/MarginContainer/InfoBanner"]
z_index = 2
y_sort_enabled = true
custom_minimum_size = Vector2(519, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 0.662745)
theme_override_fonts/normal_font = ExtResource("3_g1lr1")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Tap  with 3 fingers  to center the camera"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UiControl/MarginContainer/InfoBanner"]
libraries = {
"": SubResource("AnimationLibrary_fht44")
}

[node name="Timer" type="Timer" parent="UiControl/MarginContainer/InfoBanner"]

[node name="Settings" parent="." instance=ExtResource("6_1eey1")]
visible = false
z_index = 4096
y_sort_enabled = true

[node name="DebugUi" parent="." instance=ExtResource("7_udyie")]
visible = false
offset_left = 2.0
offset_right = 2.0

[node name="PetInteractionMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PetInteractionMenu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 200

[node name="Food" type="Button" parent="PetInteractionMenu/MarginContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_jc2jt")
text = " "

[node name="Sprite2D" type="Sprite2D" parent="PetInteractionMenu/MarginContainer/Food"]
position = Vector2(64, 73)
scale = Vector2(2.43125, 2.5875)
texture = ExtResource("10_o6vrp")
hframes = 5
